--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div class="aboutMe">
 		<div>
 			<h1>About me</h1>
-			<hr>
+			<div class="line"></div>
 			<p>
 				Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. 
 			</p>
@@ -41,7 +41,7 @@
 	<div class="projects">
 		<div>
 			<h1>Projects</h1>
-			<hr>
+			<div class="line"></div>
 			<div class="proj-container">
 				<div class="project1"></div>
 				<div class="project2"></div>
@@ -57,12 +57,8 @@
 	<div class="skills">
 		<div>
 			<h1>Skills</h1>
-			<hr>
-			<div>
-				<div class="sk1"></div>
-				<div class="sk2"></div>
-				<div class="sk3"></div>
-			</div>
+			<div class="line"></div>
+			<img src="assets/images/languages1.png">
 		</div>
 	</div>
 
@@ -70,7 +66,7 @@
 	<div class="contact">
 		<div>
 			<h1>Contact</h1>
-			<hr>
+			<div class="line"></div>
 			<div>
 				
 			</div>
