--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Jeffersson Tebang</title>
 
 	<!-- CSS -->
-	<link rel="stylesheet" type="text/css" href="assets/styles/portfolio.css">
+	<link rel="stylesheet" type="text/css" href="assets/styles/profile.css">
 
 	<!-- Disable Viewport Zooming, this is a required meta tag for web responsiveness -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -30,9 +30,9 @@
 	<div class="aboutMe">
 		<div>
 			<h1>About me</h1>
-			<div class="line"></div>
+			<div class="line line-about"></div>
 			<p>
-				Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. 
+				<em>Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang. Hello, I'm Jeffersson Tebang.</em>
 			</p>
 		</div>
 	</div>
@@ -41,7 +41,7 @@
 	<div class="projects">
 		<div>
 			<h1>Projects</h1>
-			<div class="line"></div>
+			<div class="line line-proj"></div>
 			<div class="proj-container">
 				<div class="project1"></div>
 				<div class="project2"></div>
@@ -57,7 +57,7 @@
 	<div class="skills">
 		<div>
 			<h1>Skills</h1>
-			<div class="line"></div>
+			<div class="line line-skl"></div>
 			<img src="assets/images/languages1.png">
 		</div>
 	</div>
@@ -66,9 +66,19 @@
 	<div class="contact">
 		<div>
 			<h1>Contact</h1>
-			<div class="line"></div>
+			<div class="line line-con"></div>
 			<div>
-				
+				<div class="form-contents">
+					<form action="">
+						<input type="text" name="name" class="form-input" placeholder="Enter your full name">
+						<input type="email" name="email" class="form-input" placeholder="Enter your email">
+						<input type="number" name="number" class="form-input" placeholder="Enter your contact number">
+						<textarea name="" class="form-input" placeholder="Enter your message"></textarea>
+						<div class="btn-contact">
+						<button class="btn">Contact us</button>
+						</div>
+					</form>
+				</div>
 			</div>
 		</div>
 	</div>
