semi-final done

--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
 </head>
 <body>
 	<!-- Home -->
-	<div class="home">
+	<div class="home" id="home">
 		<div>
 			<h1>Hello, I'm Jeffersson Tebang.</h1>
 			<h2>I'm a Software Engineer.</h2>
 		</div>
 		<div>
-			<button class="bton btn-view">View my work</button>
+			<button class="bton btn-view"><a href="#aboutMe">View my work</a></button>
 		</div>
 	</div>
 	<nav>
 		<ul>
-			<li>Home</li>
-			<li>About</li>
-			<li>Projects</li>
-			<li>Skills</li>
-			<li>Contact</li>
+			<li><a href="#home">Home</a></li>
+			<li><a href="#aboutMe">About</a></li>
+			<li><a href="#projs">Projects</a></li>
+			<li><a href="#skills">Skills</a></li>
+			<li><a href="#contact">Contact</a></li>
 		</ul>
 	</nav>
 	<!-- About me -->
-	<div class="aboutMe">
+	<div class="aboutMe" id="aboutMe">
 		<div>
 			<h1>About me</h1>
 			<div class="bg-color"></div>
@@ -47,7 +47,7 @@
 	</div>
 
 	<!-- Projects -->
-	<div class="projects">
+	<div class="projects" id="projs">
 		<div>
 			<h1>Projects</h1>
 			<div class="line line-proj"></div>
@@ -71,7 +71,7 @@
 	</div>
 
 	<!-- Skills -->
-	<div class="skills">
+	<div class="skills" id="skills">
 		<div>
 			<h1>Skills</h1>
 			<div class="line line-skl"></div>
@@ -80,7 +80,7 @@
 	</div>
 
 	<!-- Contact -->
-	<div class="contact">
+	<div class="contact" id="contact">
 		<div>
 			<h1>Contact</h1>
 			<div class="line line-con"></div>
