--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans:300|Roboto+Mono:100,400,700&display=swap" rel="stylesheet">
 
+	<!-- Icon -->
+    <link rel="icon" type="text/css" href="assets/cam.ico">
+
 </head>
 <body>
 	<!-- Home -->
