add projects h1 animation

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 	<!-- Projects -->
 	<div class="projects" id="projs">
 		<div>
-			<h1>Projects</h1>
-			<div class="line line-proj"></div>
+			<h1 data-aos="fade-left">Projects</h1>
+			<div class="line line-proj" data-aos="fade-right"></div>
 			<div class="proj-gall">
                 <div class="proj1 proj" data-aos="fade-right"></div>
                 <div class="projt1 proj" data-aos="fade-left">
