--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     <p>My capstone 1 is all about a photography portfolio. It's construct using HTML and CSS.</p><br>
                 </div>
                 <div class="projt2 proj" data-aos="fade-right">
-                    <h1>Capstone 2</h1><br>
-                    <p>Under construction.</p><br>
+                    <h1><a href="https://fish-eye.gitlab.io/my-profile/">Capstone 2</a></h1><br>
+                    <p>My capstone 2 is made of Laravel.</p><br>
                 </div>
                 <div class="proj2 proj"data-aos="fade-left"></div>
                 <div class="proj3 proj" data-aos="fade-right"></div>
